# k8s-calculated-config-map

./: Containerfile  Makefile  pyproject.toml
calculated_config_map/: __init__.py
calculated_config_map/k8s/: configmap.py  namespace.py
calculated_config_map/kopflib/: events.py
chart/: Chart.yaml  values.yml
chart/crds/: calculatedconfigmap.yml
chart/resources/: deployment.yaml  serviceaccount.yaml
examples/: simple.yml
